RESOLVED FIXED213841
Regression (r263788): Windows build broken: nameForRenderTreeAsText is not a member of WebCore::Color
https://bugs.webkit.org/show_bug.cgi?id=213841
Summary Regression (r263788): Windows build broken: nameForRenderTreeAsText is not a ...
Attachments
Radar WebKit Bug Importer
Comment 1 2020-07-01 06:42:29 PDT
Sam Weinig
Comment 2 2020-07-01 07:31:02 PDT
Note You need to log in before you can comment on or make changes to this bug.