Regression (r263788): Windows build broken: nameForRenderTreeAsText is not a member of WebCore::Color https://bugs.webkit.org/show_bug.cgi?id=213841 <rdar://problem/64985276>

Fix Windows build.

* platform/graphics/ca/win/PlatformCALayerWin.cpp:
(printColor):


Canonical link: https://commits.webkit.org/226643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263800 268f45cc-cd09-0410-ab3c-d52691b4dbfc